--- a/index.html
+++ b/index.html
@@ -91,7 +91,9 @@
          <!--after movie-->
          <h1 class="mb-3" style="text-align:center">Our Journey as ODP BNI</h1><br>
         <div class="container" style="display: flex;justify-content: center;align-items: center;">
-        <iframe width="80%" height="500px" src="https://www.youtube.com/embed/9YXiM7owsY4?si=0X4VD8c1JQRu3U6r" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <video width="90%" controls>
+                <source src="vid/handel - passacaglia.mp4" type="video/mp4">
+            </video>        
         </div>
         <!--efter movie end-->
 
