--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
          <h1 class="mb-3" style="text-align:center">Our Journey as ODP BNI</h1><br>
         <div class="container" style="display: flex;justify-content: center;align-items: center;">
             <video width="90%" controls>
-                <source src="vid/handel - passacaglia.mp4" type="video/mp4">
+                <source src="https://od.lk/s/NDlfMzcwNTk1NThf/handel%20-%20passacaglia.mp4" type="video/mp4">
             </video>        
         </div>
         <!--efter movie end-->
