--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                             <img class="img-fluid flex-shrink-0 rounded-circle" src="img/ELLGA FIX.png" style="width: 150px; height: 150px;">
                             <div class="ps-4">
                                 <h5 class="mb-1">Ellga Citta Naradhipa</h5>
-                                <span>Boyolali</span>
+                                <span>Sragen</span>
                             </div>
                         </div>
                     </div>
@@ -502,7 +502,7 @@
                             <img class="img-fluid flex-shrink-0 rounded-circle" src="img/ELLGA FIX.png" style="width: 65px; height: 65px;">
                             <div class="ps-4">
                                 <h5 class="mb-1">Ellga Citta Naradhipa</h5>
-                                <span>Boyolali</span>
+                                <span>Sragen</span>
                             </div>
                         </div>
                     </div>
