--- a/index.html
+++ b/index.html
@@ -412,6 +412,12 @@
                     <div class="testimonial-item rounded my-4">
                         <img src="img/gal 5.jpg">
                     </div>
+                    <div class="testimonial-item rounded my-4">
+                        <img src="img/verifdata.jpg">
+                    </div>
+                    <div class="testimonial-item rounded my-4">
+                        <img src="img/bassicaccounting.jpg">
+                    </div>
                 </div>
             </div>
         </div>
